--- a/pages/comparison-form-customer.html
+++ b/pages/comparison-form-customer.html
@@ -84,6 +84,7 @@
                 </a>
             </li>
 
+
         </ul>
     </nav>
 
@@ -102,9 +103,9 @@
                                     <table>
                                         <tr>
                                             <td>
-                                                <img style="max-width: 40%;" src="../dist/images/sig-glen.png" alt="Paperless Analytics" >
+                                                <img style="max-width: 40%;" src="../dist/images/acc-glen.png" alt="Paperless Analytics" >
                                                 <img style="max-width: 5%;" src="../dist/images/arrow.png" alt="Paperless Analytics" >
-                                                <img style="max-width: 40%;" src="../dist/images/sig-empty.png" alt="Paperless Analytics" >
+                                                <img style="max-width: 40%;" src="../dist/images/empty-form.png" alt="Paperless Analytics" >
                                             </td>
                                         </tr>
                                     </table>
