--- a/pages/index.html
+++ b/pages/index.html
@@ -31,60 +31,66 @@
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        <![endif]-->
 
-</head>
+    </head>
 
-<body>
+    <body>
 
-    <div id="wrapper">
+        <div id="wrapper">
 
-        <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-            <div class="navbar-header">
-          
-                <a class="navbar-brand" href="#">Paperless Analytics</a>
-            </div>
-            <!-- /.navbar-header -->
-            <ul class="nav navbar-top-links navbar-right">
-                <li >
-                    <a href="index.html">
-                        Thumbnail
-                    </a>
-                </li>
-                <li >
+            <!-- Navigation -->
+            <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+                <div class="navbar-header">
+
+                    <a class="navbar-brand" href="#">Paperless Analytics</a>
+                </div>
+                <!-- /.navbar-header -->
+                <ul class="nav navbar-top-links navbar-right">
+                    <li >
+                        <a href="index.html">
+                            Thumbnail
+                        </a>
+                    </li>
+                    <li >
                         <a href="comparison-form.html">
                             Comparison
                         </a>
                     </li>
                     <li >
                         <a href="comparison-simple-form.html">
-                            Data Comparison
+                            Basic Comparison
                         </a>
-                </li>
-                <li >
-                    <a href="first-form.html">
-                        Signature Form
-                    </a>
-                </li>
-                <li >
+                    </li>
+                    <li >
+                        <a href="first-form.html">
+                            Signature Form
+                        </a>
+                    </li>
+                    <li >
+                        <a href="ocr.html">
+                          OCR
+                      </a>
+                  </li>
+                  <li >
                     <a href="data_with_operations.html" >
                         Data With Operations
                     </a>
                 </li>
+
                 <li >
                     <a href="user-info-details.html" >
                         User Graphs
                     </a>
                 </li>
-                
+
             </ul>
         </nav>
 
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Thumbnail</h1>
+                    <h1 class="page-header">Customer Account Opening Form</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -111,7 +117,7 @@
                             <div class="card">
                                 <div class="card-block">
                                     <div class="card-title-block">
-                                        <h3 class="title">Personal Infomation</h3>
+                                        <h3 class="title">Personal Information = Page 1</h3>
                                     </div>
                                     <div class="image-holder">
                                         <img src="../dist/images/thumbnail-2.jpg" alt="swell logo" class="img-responsive">
@@ -126,10 +132,10 @@
                             <div class="card">
                                 <div class="card-block">
                                     <div class="card-title-block">
-                                        <h3 class="title"> Form Title</h3>
+                                        <h3 class="title"> Form Title - Page 2</h3>
                                     </div>
                                     <div class="image-holder">
-                                        <img src="../dist/images/thumbnail-1.jpg" alt="swell logo" class="img-responsive">
+                                        <img src="../dist/images/page2.png" alt="swell logo" class="img-responsive">
                                     </div>
                                 </div>
                                 <div class="hover-box">
@@ -143,10 +149,10 @@
                             <div class="card">
                                 <div class="card-block">
                                     <div class="card-title-block">
-                                        <h3 class="title"> Form Title</h3>
+                                        <h3 class="title"> Form Title - Page 3</h3>
                                     </div>
                                     <div class="image-holder">
-                                        <img src="../dist/images/thumbnail-1.jpg" alt="swell logo" class="img-responsive">
+                                        <img src="../dist/images/page3.png" alt="swell logo" class="img-responsive">
                                     </div>
                                 </div>
                                 <div class="hover-box">
@@ -158,10 +164,10 @@
                             <div class="card">
                                 <div class="card-block">
                                     <div class="card-title-block">
-                                        <h3 class="title"> Form Title</h3>
+                                        <h3 class="title"> Customer Form - Page 4</h3>
                                     </div>
                                     <div class="image-holder">
-                                        <img src="../dist/images/thumbnail-1.jpg" alt="swell logo" class="img-responsive">
+                                        <img src="../dist/images/page4.png" alt="swell logo" class="img-responsive">
                                     </div>
                                 </div>
                                 <div class="hover-box">
@@ -173,10 +179,10 @@
                             <div class="card">
                                 <div class="card-block">
                                     <div class="card-title-block">
-                                        <h3 class="title"> Form Title</h3>
+                                        <h3 class="title"> Form Title Page 5</h3>
                                     </div>
                                     <div class="image-holder">
-                                        <img src="../dist/images/thumbnail-1.jpg" alt="swell logo" class="img-responsive">
+                                        <img src="../dist/images/page5.png" alt="swell logo" class="img-responsive">
                                     </div>
                                 </div>
                                 <div class="hover-box">
@@ -184,32 +190,78 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <div class="card">
+                                    <div class="card-block">
+                                        <div class="card-title-block">
+                                            <h3 class="title"> Form Title - Page 3</h3>
+                                        </div>
+                                        <div class="image-holder">
+                                            <img src="../dist/images/page3.png" alt="swell logo" class="img-responsive">
+                                        </div>
+                                    </div>
+                                    <div class="hover-box">
+                                        <a href="#">Edit Form</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="card">
+                                    <div class="card-block">
+                                        <div class="card-title-block">
+                                            <h3 class="title"> Customer Form - Page 4</h3>
+                                        </div>
+                                        <div class="image-holder">
+                                            <img src="../dist/images/page4.png" alt="swell logo" class="img-responsive">
+                                        </div>
+                                    </div>
+                                    <div class="hover-box">
+                                        <a href="first-form.html">Edit Form</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="card">
+                                    <div class="card-block">
+                                        <div class="card-title-block">
+                                            <h3 class="title"> Form Title Page 5</h3>
+                                        </div>
+                                        <div class="image-holder">
+                                            <img src="../dist/images/page5.png" alt="swell logo" class="img-responsive">
+                                        </div>
+                                    </div>
+                                    <div class="hover-box">
+                                        <a href="first-form.html">Edit Form</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- /#page-wrapper -->
+
         </div>
-        <!-- /#page-wrapper -->
+        <!-- /#wrapper -->
 
-    </div>
-    <!-- /#wrapper -->
+        <!-- jQuery -->
+        <script src="../vendor/jquery/jquery.min.js"></script>
 
-    <!-- jQuery -->
-    <script src="../vendor/jquery/jquery.min.js"></script>
+        <!-- Bootstrap Core JavaScript -->
+        <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+        <!-- Metis Menu Plugin JavaScript -->
+        <script src="../vendor/metisMenu/metisMenu.min.js"></script>
 
-    <!-- Metis Menu Plugin JavaScript -->
-    <script src="../vendor/metisMenu/metisMenu.min.js"></script>
+        <!-- Morris Charts JavaScript -->
+        <script src="../vendor/raphael/raphael.min.js"></script>
+        <script src="../vendor/morrisjs/morris.min.js"></script>
+        <script src="../data/morris-data.js"></script>
 
-    <!-- Morris Charts JavaScript -->
-    <script src="../vendor/raphael/raphael.min.js"></script>
-    <script src="../vendor/morrisjs/morris.min.js"></script>
-    <script src="../data/morris-data.js"></script>
+        <!-- Custom Theme JavaScript -->
+        <script src="../dist/js/sb-admin-2.js"></script>
 
-    <!-- Custom Theme JavaScript -->
-    <script src="../dist/js/sb-admin-2.js"></script>
+    </body>
 
-</body>
-
-</html>
+    </html>
