--- a/pages/user-info-details.html
+++ b/pages/user-info-details.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Analytics tool</title>
+    <title>Paperless Analytics</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
             <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
                 <div class="navbar-header">
 
-                    <a class="navbar-brand" href="#">Analytics tool</a>
+                    <a class="navbar-brand" href="#">Paperless Analytics</a>
                 </div>
                 <!-- /.navbar-header -->
                 <ul class="nav navbar-top-links navbar-right">
