--- a/pages/comparison-form.html
+++ b/pages/comparison-form.html
@@ -84,17 +84,16 @@
 
     <div >
         <!-- /.row -->
-        <div class="container1">
-            <div class="wrapper1">
-                <div class="row1">
-                    <div class="col-sm-41">
-                        <div class="card1">
-                            <div >
-                                <div class="card-title-block">
-                                    <h3 class="title"> Scanned to Html Version</h3>
-                                </div>
-                                <div >
-                                    <table>
+<div id="page-wrapper">
+        <div class="row">
+          <div class="col-lg-12">
+            <h1 class="page-header">Scanned to Html Version</h1>
+          </div>
+          <!-- /.col-lg-12 -->
+        </div>
+        <div class="container">
+          <div class="wrapper">
+          <table class="comparison-table">
                                         <tr>
                                             <td>
                                                 <img style="max-width: 40%;" src="../dist/images/sig-glen.png" alt="Paperless Analytics" >
@@ -103,18 +102,9 @@
                                             </td>
                                         </tr>
                                     </table>
-                                </div>
-                            </div>
-                            <div class="hover-box">
-                                <a href="first-form.html">Edit Form</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+          </div>
+          </div>
         </div>
-    </div>
-    <!-- /#page-wrapper -->
 
 </div>
 <!-- /#wrapper -->
