--- a/pages/index.html
+++ b/pages/index.html
@@ -120,7 +120,7 @@
                                     </div>
                                 </div>
                                 <div class="hover-box">
-                                    <a href="first-form.html">Edit Form</a>
+                                    <a href="personal-information.html">Edit Form</a>
                                 </div>
                             </div>
                         </div>
@@ -186,6 +186,7 @@
                                 </div>
                             </div>
                         </div>
+                        </div>
                         <div class="row">
                             <div class="col-sm-4">
                                 <div class="card">
@@ -232,6 +233,23 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-sm-4">
+                                <div class="card">
+                                    <div class="card-block">
+                                        <div class="card-title-block">
+                                            <h3 class="title"> Bank Cheque Page 6</h3>
+                                        </div>
+                                        <div class="image-holder">
+                                            <img src="../dist/images/bank-cheque.png" alt="swell logo" class="img-responsive h-auto">
+                                        </div>
+                                    </div>
+                                    <div class="hover-box">
+                                        <a href="bank-cheque.html">Edit Form</a>
+                                    </div>
+                                </div>
+                            </div>
+
+
                         </div>
                     </div>
                 </div>
