--- a/pages/personal-information.html
+++ b/pages/personal-information.html
@@ -72,7 +72,7 @@
       <div id="page-wrapper">
         <div class="row">
           <div class="col-lg-12">
-            <h1 class="page-header">Personal Infomation Form</h1>
+            <h1 class="page-header">Personal Information Form</h1>
           </div>
           <!-- /.col-lg-12 -->
         </div>
