--- a/ocr.html
+++ b/ocr.html
@@ -130,7 +130,7 @@
                                     <div class="holder">
                                       <h5 for="exampleInputName2" class="m-w142">Account to be operated</h5>
                                       <label class="checkbox-inline">
-                                        <input type="checkbox" id="inlineCheckbox1" value="option1" checked="true"> Singly
+                                        <input type="checkbox" id="inlineCheckbox1" value="option1" checked="true"> <strong>Singly</strong>
                                       </label>
                                       <label class="checkbox-inline">
                                         <input type="checkbox" id="inlineCheckbox2" value="option2"> Jointly
