personal info with image

--- a/thumbnail.html
+++ b/thumbnail.html
@@ -78,7 +78,7 @@
                                     </div>
                                 </div>
                                 <div class="hover-box">
-                                    <a href="personal-information.html">Edit Form</a>
+                                    <a href="personal-information-img.html">Edit Form</a>
                                 </div>
                             </div>
                         </div>
